--- a/blog/content/docs/basics.adoc
+++ b/blog/content/docs/basics.adoc
@@ -6,10 +6,9 @@ layout: doc
 
 = Roq the basics
 
-By default, your site files should be located in the **project root directory**.
+{#include partials/doc/edit-contrib.adoc name="basics" /}
 
-TIP: you may also put it in the Java resources (i.e. `src/main/resources/`).
-
+By default, your site files should be located in the **project root directory** (or in the Java resources dir: `src/main/resources/`).
 
 {#include partials/doc/directory-structure.adoc /}
 
@@ -57,7 +56,7 @@ NOTE: if you don't already have layouts and partials in your project, <<install-
 
 If you’re using a theme, you can take advantage of its layouts, but you’re also free to add your own. Layouts are built on a powerful inheritance system, allowing flexibility and customization.
 
-Tip: When using a theme, you can create new layouts that extend the existing theme layouts or partially override them to better suit your needs. Learn more here: link:{site.url('docs/advanced/')}#overriding-theme[Overriding Theme].
+TIP: When using a theme, you can create new layouts that extend the existing theme layouts or partially override them to better suit your needs. Learn more here: link:{site.url('docs/advanced/')}#overriding-theme[Overriding Theme].
 
 In this sample we will create a simple 3 steps inheritance layout. All below files should be located in the `templates/layouts/` directory.
 
@@ -338,12 +337,15 @@ You can use Qute to access site and pages data. For this use the `site` and `pag
 |===
 ====
 
+|}
+
 == Pages
 
 Any template file without the `_` prefix in the site `content/` directory (and subdirectories) will be scanned as pages.
 
 Let's create your first page and spice things up a bit by using Markdown.
 
+{|
 [source,markdown]
 .roq-bottom.md
 ----
@@ -368,6 +370,7 @@ __{page.data.the-rope}!__ <3>
 <1> you can use `link` to give this page a custom link (by default it will use the file-name).
 <2> you can add other FM data.
 <3> FM data is available through `page.data`.
+|}
 
 == Global data
 
@@ -381,7 +384,7 @@ For example:
 bar: Roq
 ----
 
-Can be access with `{cdi:foo.bar}` in any template.
+Can be access with `\{cdi:foo.bar}` in any template.
 
 
 == Collections
@@ -391,6 +394,7 @@ Once created you can easily iterate and link to them.
 
 By default, Roq is configured with a `posts` collection using the `content/posts` directory. Let's create our first post:
 
+{|
 [source,markdown]
 .content/posts/2024-10-14-roq-solid.md
 ----
@@ -430,10 +434,10 @@ Here is a list of puns suggested by Chat GPT:
 <1> This time we use the `post` layout from the theme.
 <2> You can define tags (see link:{site.url('docs/plugins')}#plugin-tagging[Plugins] to create pages for tags).
 <3> You have shortcut on the `page` to access `title` and `description`.
-{|
 
 Ok, to dive a bit deeper, we could create a json listing all posts with some info:
 
+{|
 [source,html]
 .content/posts.json
 ----
@@ -449,15 +453,13 @@ Ok, to dive a bit deeper, we could create a json listing all posts with some inf
 {/for}
 ]
 ----
-|}
-
 <1> You can use `site.collections.[collection id]` to access the full list of documents (it is also possible to  link:{site.url('docs/advanced/')}#pagination[paginate]).
 <2> `post.image` is smart and is already resolved to the image url (as a RoqUrl), `absolute` to get the absolute url.
 <3> `post.url` contains the post url (as a RoqUrl), you could also use `absolute` to get the absolute url.
 <4> `post.date` returns a `ZonedDateTime` and can be formatted the way you want.
 <5> `post.readTime` is a Qute template extension which compute the read time based on the post content.
 
-{|
+|}
 
 === How to create custom collections?
 
@@ -498,12 +500,14 @@ NOTE: Since we're adding a new collection, it's also necessary to declare the ex
 
 Now, we can access all the new collection `docs` data as follows:
 
+{|
 [source]
 ----
 {#for doc in site.collections.docs}
 - [{doc.title}]({doc.url})
 {/for}
 ----
+|}
 
 Since the new collection is also a normal page, we can use all variables described in the link:#_variables[variable section].
 
@@ -554,10 +558,11 @@ The resulting link for a page can be different from its directory name, attached
 
 Let's imagine for a minute that the page link is `https://my-site.org/awesome-page/`, then the slide will be served on `https://my-site.org/awesome-page/slide.pdf`.
 
+{|
 You can use `{page.file("slide.pdf")}` to resolve the file url *and check that the file exists*. This is also useful in other cases, for example from another page (e.g. `{site.page("my-page/index.md").file("slide.pdf")}`) or if you want the absolute url (e.g. `{page.file("slide.pdf").absolute}`):
 
 TIP: If you want to iterate over page files, they can be listed using `{page.files}`.
-
+|}
 
 === Images
 
@@ -567,15 +572,15 @@ The site images should be added in the public image directory (e.g. `my-site/pub
 
 The default public path prefix for images is `images/` (this can be changed in the site configuration).
 
-Url can be accessed using the site variable as shown in this example: `<img src="{site.image('image-1.png')`}" />.
+Url can be accessed using the site variable as shown in this example: `<img src="\{site.image('image-1.png')`}" />.
 
-TIP: The image method is a convenience and is equivalent to using `<img src="{site.file('images/image-1.png')`}" />.
+TIP: The image method is a convenience and is equivalent to using `<img src="\{site.file('images/image-1.png')`}" />.
 
 ==== Page images
 
-When using pages as directories (such as `posts/surf/index.html`), `{page.image(name)}` checks if the file is attached to the given page and return its url.
+When using pages as directories (such as `posts/surf/index.html`), `\{page.image(name)}` checks if the file is attached to the given page and return its url.
 
-In other pages (such as `posts/basketball.md`), `{page.image(name)}` will act the same as `site.image(name)` and resolve from the site image directory.
+In other pages (such as `posts/basketball.md`), `\{page.image(name)}` will act the same as `site.image(name)` and resolve from the site image directory.
 
 Let's take this example structure:
 
@@ -602,6 +607,7 @@ my-site/
 
 Here is how to access those images from the article:
 
+{|
 [source,html]
 .surf-article/index.html
 ----
@@ -620,16 +626,17 @@ image: cover.jpg
 <img src="{page.image('soccer.jpg')}" /> <6>
 <img src="{page.image('basketball.jpg')}" /> <6>
 ----
-
 <1> Relative links are working when using <<page-files>>.
 <2> Will show the page cover image (same as `{page.image('cover.png')}`)
 <3> `surf.jpg` is also attached to this page
 <4> `site.image(path)` looks into `/public/images/` by default (with disk checking).
 <5> render the absolute url (e.g. `https://my-site.org/images/basketball.png`)
 <6> this would throw an error!
+|}
 
 === Page & Site cover image
 
+{|
 Page cover image is referenced in the page FM `image` data.
 [source,yaml]
 .some-page.md
@@ -653,6 +660,8 @@ image: my-site.png
 
 It can be accessed in any template through `{site.image}`.
 
+|}
+
 == Styles and Javascript
 
 Here are two options to consume scripts and styles:
@@ -675,6 +684,7 @@ my-site/
 
 To include the generated bundle in your template, specify the bundle tag in the `html>head` tag:
 
+{|
 [source,html]
 .layouts/head.html
 ----
@@ -683,6 +693,7 @@ To include the generated bundle in your template, specify the bundle tag in the 
   {#bundle /}
 </head>
 ----
+|}
 
 It will be rendered with the relevant `<script>` and `<style>` tags to include your bundle.
 
@@ -692,18 +703,15 @@ For more info, read the https://docs.quarkiverse.io/quarkus-web-bundler/dev/[Qua
 
 == Asciidoc support
 
-|}
 Asciidoc is supported by Roq using link:{site.url('docs/plugins/')}#plugin-asciidoc[plugins].
 
 {|
 Using `{something}` will be parsed by Qute, to avoid issues with custom attributes, you can either escape it `\\{something}`, or wrap more content inside `{|` and `|&#125;`.
-
+|}
 
 === Includes
 
 The standard Asciidoc include is not supported, but you can use Qute includes instead:
 
 . Place your file in a folder under the `template` directory (for example `partials`)
-. Use Qute include directive `{# partials/your_included_file.adoc /}` to include it
-
-|}
+. Use Qute include directive `\{# partials/your_included_file.adoc /}` to include it
