Allow custom favicon and rename file and image exists methods

--- a/blog/content/posts/2024-10-09-aliases.md
+++ b/blog/content/posts/2024-10-09-aliases.md
@@ -38,4 +38,4 @@ aliases: [aliases-very-cool, aliases-4-ever, aliases-again]
 ...
 ```
 
-For more info [check out the doc](https://docs.quarkiverse.io/quarkus-roq/dev/quarkus-roq-plugins.html#_roq_plugin_aliases).
+For more info [check out the doc](https://iamroq.com/docs/plugins/#plugin-aliases).
