--- a/blog/content/posts/2024-10-08-tagging.md
+++ b/blog/content/posts/2024-10-08-tagging.md
@@ -22,4 +22,4 @@ To use it:
 
 and adding a new `layouts/tag.html` page or any layout with `tagging: [name of collection]` as FM data.
 
-For more info [check out the doc](https://docs.quarkiverse.io/quarkus-roq/dev/quarkus-roq-plugins.html#_roq_plugin_tagging).
+For more info [check out the doc](https://iamroq.com/docs/plugins/#plugin-tagging).
