--- a/blog/content/docs/advanced.adoc
+++ b/blog/content/docs/advanced.adoc
@@ -364,6 +364,14 @@ TIP: By default, url will be rendered as the path from the site root. You can al
 Sometimes, you want to create a link for a page without holding the variable, in this case, you can use `site.url(relativePath)` which will be automatically resolved from the site root path.
 
 
+== Setting the Root Path for your site (sub-path)
+
+When the entire Roq site is under a sub-path, configure `quarkus.http.root-path` in you Quarkus configuration.
+
+Environment variable: `SITE_ROOT_PATH`
+
+TIP: For GitHub Pages, this is already handled by the Roq GitHub Action, no need to do anything.
+
 == Testing
 
 All templates will be validated at generation. Sometimes, for example on Pull-Request, you want to detect issues before actual generation. Roq provides a way to generate the full site during the test phase.
