--- a/blog/content/docs/advanced.adoc
+++ b/blog/content/docs/advanced.adoc
@@ -279,6 +279,11 @@ TIP: Those links are also available in the Qute data to allow <<roq-url>>.
 | `my-page-title`
 
 | All
+| `:Slug`
+| The case-preserving slugified title of the page, derived from the title. Defaults to the `slug` property in data, if available or using the slugified title, falling back to the file name.
+| `My-Page-Title`
+
+| All
 | `:ext`
 | The file extension with the dot. Empty for all files with html output (md, asciidoc, html, ...).
 | `.json`
