Update plugins.adoc to fix #531
Fixing Lunr plugin example.

--- a/blog/content/docs/plugins.adoc
+++ b/blog/content/docs/plugins.adoc
@@ -275,6 +275,8 @@ layout: theme-layouts/roq-default/default
 
 {#head}
 {#search-script /}
+{/}
+
 ...
 
 ----
@@ -293,7 +295,7 @@ layout: theme-layouts/roq-default/main
 
 {#menu}
 {#search-button /}
-{#include partials/roq-default/sidebar-menu menu=cdi:menu.items /}{/}
+{#include partials/roq-default/sidebar-menu menu=cdi:menu.items /}
 {/}
 
 ...
